tests/multi_file/failing/P2_private_include_pub_hint/module.mlang
namespace secrets {
    let token "very-secret";
}
